--- a/srcs/.env
+++ b/srcs/.env
@@ -1,12 +1,12 @@
 
-#MariaDB
+#MariaDB SETUP
 
 MYSQL_ROOT_PASSWORD: rootpassword 
 MYSQL_DATABASE: wordpress
 MYSQL_USER: wp_user
 MYSQL_PASSWORD: wp_password
 
-#WP
+#WP SETUP
 WORDPRESS_DB_HOST: mariadb:3306
 WORDPRESS_DB_USER: wp_user
 WORDPRESS_DB_PASSWORD: wp_password
