--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,12 +1,16 @@
 FROM debian:11
 
-RUN apt update && apt upgrade && apt install -y \
-	nginx 
-# RUN apt install curl -y 
-# RUN apt install sudo -y 
-# 		openssl			\
-# 		vim				\
+RUN apt update && apt upgrade \
+	&& apt install nginx -y \
+	&& apt install openssl -y \
+	&& apt install sudo -y 
 
+
+# generate ssl certificate
+
+RUN openssl req -batch -x509 -sha256 -nodes -newkey rsa:2048 -days 365 \
+	-keyout /etc/ssl/private/localhost.key \
+	-out /etc/ssl/certs/localhost.crt
 
 # RUN			rm -f /etc/nginx/nginx.conf
 
@@ -15,7 +19,7 @@ RUN apt update && apt upgrade && apt install -y \
 
 # RUN			chmod -R +x /setup_nginx.sh
 
-# EXPOSE		443
+EXPOSE		443
 
 # ENTRYPOINT	["sh", "setup_nginx.sh"]
 CMD ["nginx", "-g", "daemon off;"]  
