update nginx & mariadb

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,13 +1,20 @@
 
-#MariaDB SETUP
+#MariaDB -MYSQL SETUP
 
 MYSQL_ROOT_PASSWORD: rootpassword 
-MYSQL_DATABASE: wordpress
+MYSQL_DB: wordpress #database name
 MYSQL_USER: wp_user
 MYSQL_PASSWORD: wp_password
 
-#WP SETUP
-WORDPRESS_DB_HOST: mariadb:3306
-WORDPRESS_DB_USER: wp_user
-WORDPRESS_DB_PASSWORD: wp_password
-WORDPRESS_DB_NAME: wordpress
+# WP SETUP
+DOMAIN_NAME=domain_name.fr # domain name of the website
+WP_ADMIN_N=admin_name # admin name
+WP_ADMIN_P=admin_password # admin password
+WP_TITLE=website_title # website title
+WP_ADMIN_E=admin_@email.com # admin email
+
+# WP NEW USER SETUP
+WP_U_NAME=user_name # user name of the new user
+WP_U_PASS=user_password # user password
+WP_U_ROLE=author # author, editor, Administrator ...
+WP_U_EMAIL=user_@email.com # user email
