--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -6,13 +6,15 @@ services:
     build:
       context: requirements/nginx/
       dockerfile: Dockerfile
-    # env_file: .env         # indique le fichier optionnel contenant l'environnement
-    # depends_on:
-    #   -wordpress
+    env_file: .env         # indique le fichier optionnel contenant l'environnement
+    depends_on:
+      - wordpress
     ports:
       - "443:443"
-    # Network :
-    #   - wordpress_network
+     volume:
+      - wordpress_files
+    network:
+      - inception
     restart: always     
 
   wordpress:
@@ -24,20 +26,19 @@ services:
     volume:
       - wordpress_files
     network:
-      - wordpress_network
+      - inception
     depends_on:
       - mariadb
     restart: always 
   
   mariadb:
     container_name: mariadb
-    env_file: .env
     build: requirements/mariadb/
     env_file: .env
     volume:
       - db_data
     network:
-      - wordpress_network   
+      - inception  
     restart: always
   
   volume:
@@ -45,5 +46,5 @@ services:
     - db_data: /var/lib/mysql
 
   network:
-    - wordpress_network
+    - inception
 
