--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,26 +1,35 @@
 FROM debian:11
 
-RUN apt update && apt upgrade \
-	&& apt install nginx -y \
-	&& apt install openssl -y \
-	&& apt install sudo -y 
+RUN apt update && apt upgrade 
+RUN  apt install nginx -y \
+	&& apt install openssl -y 
+
+#repertoire de stockage ssl :certificate & key
+RUN mkdir -p /etc/nginx/ssl 
+
+# generate ssl certificate a verifier
+
+RUN openssl req -batch -x509 -sha256 -nodes -newkey rsa:2048 \
+	-keyout /etc/nginx/ssl/inception.key \
+	-out /etc/nginx/ssl/inception.crt \
+	-subj "/C=FR/ST=IDF/L=Paris/O=42/OU=42/CN=sonouelg.42.fr/UID=sonouelg"
 
 
-# generate ssl certificate
+RUN	mkdir -p /var/run/nginx 
 
-RUN openssl req -batch -x509 -sha256 -nodes -newkey rsa:2048 -days 365 \
-	-keyout /etc/ssl/private/localhost.key \
-	-out /etc/ssl/certs/localhost.crt
-
-# RUN			rm -f /etc/nginx/nginx.conf
-
-# COPY		./config/nginx.conf /etc/nginx/nginx.conf
+COPY		conf/nginx.conf /etc/nginx/nginx.conf
 # COPY		scripts/setup_nginx.sh /setup_nginx.sh
 
-# RUN			chmod -R +x /setup_nginx.sh
+#create wp directory
+RUN mkdir -p /var/www/html
+
+# #chg owner et rights de html to www-data
+RUN chmod 755 /var/ww/html
+RUN chown -R www-data:www-data /var/www/html
+
 
 EXPOSE		443
 
-# ENTRYPOINT	["sh", "setup_nginx.sh"]
+# # ENTRYPOINT	["sh", "setup_nginx.sh"]
 CMD ["nginx", "-g", "daemon off;"]  
 #assure que nginx reste le processus principal PID 1
