--- a/srcs/.env
+++ b/srcs/.env
@@ -1,20 +1,20 @@
 
 #MariaDB -MYSQL SETUP
 
-MYSQL_ROOT_PASSWORD: rootpassword 
-MYSQL_DB: wordpress #database name
-MYSQL_USER: wp_user
-MYSQL_PASSWORD: wp_password
+MYSQL_ROOT_PASSWORD=trophy 
+MYSQL_DB=wordpress #database name
+MYSQL_USER=sonouelg
+MYSQL_PASSWORD=toto
 
 # WP SETUP
-DOMAIN_NAME=domain_name.fr # domain name of the website
-WP_ADMIN_N=admin_name # admin name
-WP_ADMIN_P=admin_password # admin password
-WP_TITLE=website_title # website title
+DOMAIN_NAME=sonouelg.42.fr # domain name of the website
+WP_ADMIN_N=trophy # admin name
+WP_ADMIN_P= toto# admin password
+WP_TITLE="my Inception" # website title
 WP_ADMIN_E=admin_@email.com # admin email
 
 # WP NEW USER SETUP
-WP_U_NAME=user_name # user name of the new user
-WP_U_PASS=user_password # user password
+WP_U_NAME=titi # user name of the new user
+WP_U_PASS=toto # user password
 WP_U_ROLE=author # author, editor, Administrator ...
 WP_U_EMAIL=user_@email.com # user email
