--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,49 +2,54 @@ version: "3" # mettre la version de compose
 
 services:
   nginx:
+    image : nginx
     container_name: nginx
     build:
       context: requirements/nginx/
       dockerfile: Dockerfile
-    env_file: .env         # indique le fichier optionnel contenant l'environnement
+    env_file: 
+      - .env        
     depends_on:
       - wordpress
     ports:
-      - "443:443"
-     volume:
+      - 443:443
+     volumes:
       - wordpress_files
-    network:
+    networks:
       - inception
     restart: always     
 
   wordpress:
+    image: wordpress
     container_name: wordpress
     build: requirements/wordpress/
-    env_file: .env    
-    ports:
-    - "80:80"
-    volume:
+    env_file: 
+      - .env   
+    volumes:
       - wordpress_files
-    network:
+    networks:
       - inception
     depends_on:
       - mariadb
     restart: always 
   
   mariadb:
+    image: mariadb
     container_name: mariadb
     build: requirements/mariadb/
-    env_file: .env
-    volume:
+    env_file: 
+      - .env
+    volumes:
       - db_data
-    network:
+    networks:
       - inception  
     restart: always
   
-  volume:
+  volumes:
     - wordpress_files: /var/www/html
     - db_data: /var/lib/mysql
 
-  network:
-    - inception
+  networks:
+    inception:
+      driver: bridge
 
