--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -1,7 +1,6 @@
 [mysqld]
 user       = mysql
 datadir    = /var/lib/mysql
-pid-file   = /run/mysqld/mysqld.pid
 socket	   = /run/mysqld/mysqld.sock
 port       = 3306
-bind-address    = *
+bind-address = 0.0.0.0
