--- a/old_1612204_New/srcs/.env
+++ b/old_1612204_New/srcs/.env
@@ -13,3 +13,6 @@ WP_ADMIN_P= 1234# admin password
 WP_TITLE="my Inception" # website title
 WP_ADMIN_E=sonouelg@student.42.fr # admin email
 
+WP_U_NAME=student
+WP_U_EMAIL=student@gmail.com
+WP_U_PASS=1234
