--- a/old_1612204_New/srcs/requirements/mariadb/Dockerfile
+++ b/old_1612204_New/srcs/requirements/mariadb/Dockerfile
@@ -11,6 +11,6 @@ COPY		./mariadb-conf.sh /mariadb-conf.sh
 
 RUN			chmod +x /mariadb-conf.sh
 
-# EXPOSE		3306
+EXPOSE		3306
 
 ENTRYPOINT	["./mariadb-conf.sh"]
