--- a/old_1612204_New/srcs/docker-compose.yml
+++ b/old_1612204_New/srcs/docker-compose.yml
@@ -1,32 +1,28 @@
-version: '3.8' # mettre la version de compose
-
 services:
   nginx:
-    image : nginx
+    image : nginx:1
     container_name: nginx
-    build:
-      context: requirements/nginx/
-      dockerfile: Dockerfile
+    build: requirements/nginx/
     env_file: 
       - .env        
     depends_on:
       - wordpress
     ports:
       - 443:443
-     volumes:
-      - wordpress_files
+    volumes:
+      - wordpress:/var/www/html
     networks:
       - inception
     restart: always     
 
   wordpress:
-    image: wordpress
+    image: wordpress:1
     container_name: wordpress
     build: requirements/wordpress/
     env_file: 
       - .env   
     volumes:
-      - wordpress_files
+      - wordpress:/var/www/html
     networks:
       - inception
     depends_on:
@@ -34,22 +30,34 @@ services:
     restart: always 
   
   mariadb:
-    image: mariadb
+    image: mariadb:1
     container_name: mariadb
     build: requirements/mariadb/
     env_file: 
       - .env
     volumes:
-      - db_data
+      - mariadb:/var/lib/mysql
     networks:
       - inception  
     restart: always
   
-  volumes:
-    - wordpress_files: /var/www/html
-    - db_data: /var/lib/mysql
+volumes:
+  mariadb:
+    name: mariadb
+    driver: local
+    driver_opts:
+      device: /home/sonia42/data/mariadb
+      o: bind
+      type: none
+  wordpress:
+    name: wordpress
+    driver: local
+    driver_opts:
+      device: /home/sonia42/data/wordpress
+      o: bind
+      type: none
 
-  networks:
-    inception:
-      driver: bridge
+networks:
+  inception:
+    driver: bridge
 
