--- a/old_1612204_New/srcs/requirements/wordpress/Dockerfile
+++ b/old_1612204_New/srcs/requirements/wordpress/Dockerfile
@@ -1,7 +1,10 @@
 FROM debian:11
 
 RUN apt update && apt upgrade 
-RUN  apt install -y curl php php7.4-fpm php-mysql mariadb-client
+RUN  apt install -y curl \
+     php \
+     php7.4-fpm \
+     php-mysql \mariadb-client
 
 # copy the wordpress configuration script to the root directory in the container
 COPY conf/wp_conf.sh /
@@ -10,4 +13,4 @@ COPY conf/wp_conf.sh /
 RUN  chmod +x wp_conf.sh
 
 # define the entrypoint command to run when the container starts
-ENTRYPOINT ["conf/wp_conf.sh"]
+ENTRYPOINT ["/wp_conf.sh"]
