--- a/work_20241217/srcs/requirements/nginx/conf/nginx.conf
+++ b/work_20241217/srcs/requirements/nginx/conf/nginx.conf
@@ -27,9 +27,11 @@ http {
 		}
 
 		# Forward any call ending in .php to our wordpress container
-		# location ~ \.php$ {
-		# 	include snippets/fastcgi-php.conf;
-		# }
+		location ~ \.php$ {
+			include snippets/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;
+
+		}
 		
 	}
 }
