--- a/work_20241217/srcs/requirements/nginx/Dockerfile
+++ b/work_20241217/srcs/requirements/nginx/Dockerfile
@@ -11,7 +11,7 @@ RUN mkdir -p /etc/nginx/ssl
 RUN chmod 755 /etc/nginx/ssl 
 RUN chown -R www-data:www-data /etc/nginx/ssl 
 
-# generate ssl certificate a verifier
+# ssl certificate parametres
 
 RUN openssl req -batch -x509 -sha256 -nodes -days 365 -newkey rsa:2048 \
 	-keyout /etc/nginx/ssl/inception.key \
@@ -21,15 +21,10 @@ RUN openssl req -batch -x509 -sha256 -nodes -days 365 -newkey rsa:2048 \
 
 COPY		conf/nginx.conf /etc/nginx/nginx.conf
 
-#create wp directory
 RUN mkdir -p /var/www/html
-
-# #chg owner et rights de html to www-data
 RUN chmod 755 /var/www/html
 RUN chown -R www-data:www-data /var/www/html
-
 
 EXPOSE	443
 
 CMD ["nginx", "-g", "daemon off;"]  
-#assure que nginx reste le processus principal PID 1
