--- a/work_20241217/Makefile
+++ b/work_20241217/Makefile
@@ -58,4 +58,4 @@ help:
 
 .PHONY: help build up start down destroy stop restart ps
 
-# docker stop $(docker ps -qa); docker rm $(docker ps -qa); docker rmi -f $(docker images -qa); docker volume rm $(docker volume ls -q); docker network rm $(docker network ls -q)
+# docker stop $(docker ps -qa); docker rm $(docker ps -qa); docker rmi -f $(docker images -qa); docker volume rm $(docker volume ls -q); docker network rm $(docker network ls -q) 2>/dev/null
